fix alignment and translations in otp input

--- a/src/main/webapp/app/shared/components/atoms/otp-input/otp-input.scss
+++ b/src/main/webapp/app/shared/components/atoms/otp-input/otp-input.scss
@@ -2,11 +2,17 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-}
-
-.buttons {
-  display: flex;
   align-items: center;
-  gap: 2rem;
-  justify-content: space-between;
+
+  .otp-instruction {
+    text-align: center;
+    color: var(--p-text-primary);
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: space-between; /* pushes first button left, last button right */
+    width: 100%; /* make sure the container spans full width */
+    gap: 2rem; /* minimum spacing between buttons */
+  }
 }
